Documentation edits made through Mintlify web editor

--- a/automation/group-customers.mdx
+++ b/automation/group-customers.mdx
@@ -1,6 +1,91 @@
 ---
-title: 'Nhóm khách hàng'
-description: 'Description of your new file.'
+title: "Nhóm khách hàng"
+description: "Description of your new file."
 icon: "users"
 ---
 
+#### **Thêm nhóm khách hàng**
+
+Truy cập **Automation → Nhóm khách hàng → Thêm nhóm**\
+→ Nhập các thông tin trong biểu mẫu\
+→ Chọn **Tạo** để hoàn tất thêm nhóm khách hàng.
+
+<Frame caption="Thêm nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image582_89bc70e1d2.png"
+    alt="Giao diện thêm nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Xem chi tiết nhóm khách hàng**
+
+Truy cập **Automation → Nhóm khách hàng**\
+→ Nhấn vào biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết nhóm khách hàng.
+
+<Frame caption="Xem chi tiết nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image584_f251ffed29.png"
+    alt="Thông tin chi tiết nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+<Frame caption="Xem chi tiết nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image583_9b55b5bbf0.png"
+    alt="Chi tiết nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Chỉnh sửa nhóm khách hàng**
+
+Truy cập **Automation → Nhóm khách hàng**\
+→ Nhấn vào biểu tượng <Icon icon="edit" color="#cfcfcf" size={15} /> để chỉnh sửa thông tin nhóm.
+
+<Frame caption="Chỉnh sửa nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image585_2b4a171d0a.png"
+    alt="Giao diện chỉnh sửa nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Xóa nhóm khách hàng**
+
+Truy cập **Automation → Nhóm khách hàng**\
+→ Nhấn vào biểu tượng <Icon icon="trash-2" color="#cfcfcf" size={15} /> để xóa nhóm khách hàng.
+
+<Frame caption="Xóa nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image586_52ce47c4a8.png"
+    alt="Giao diện xác nhận xóa nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Tìm kiếm nhóm khách hàng**
+
+Truy cập **Automation → Nhóm khách hàng**\
+→ Nhập từ khóa vào thanh tìm kiếm và nhấn **Enter** để tìm nhóm khách hàng mong muốn.
+
+<Frame caption="Tìm kiếm nhóm khách hàng">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image587_7ae7cb9676.png"
+    alt="Giao diện tìm kiếm nhóm khách hàng"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+📘 _Mẹo:_ Người dùng có thể kết hợp từ khóa (ví dụ “VIP”, “Khách lẻ”, “Doanh nghiệp”) để lọc nhanh nhóm cần tìm.
