--- a/booking-management/booking-management.mdx
+++ b/booking-management/booking-management.mdx
@@ -1,6 +1,5 @@
 ---
-title: 'Bookings'
-description: 'Description of your new file.'
+title: "Bookings"
+description: "Description of your new file."
 icon: "calendar-days"
 ---
-
