Documentation edits made through Mintlify web editor

--- a/automation/group-customers.mdx
+++ b/automation/group-customers.mdx
@@ -61,7 +61,7 @@ Truy cập **Automation → Nhóm khách hàng**\
 #### **Xóa nhóm khách hàng**
 
 Truy cập **Automation → Nhóm khách hàng**\
-→ Nhấn vào biểu tượng <Icon icon="trash-2" color="#cfcfcf" size={15} /> để xóa nhóm khách hàng.
+→ Nhấn vào biểu tượng <Icon icon="trash-can" color="#ff0000" size={15} /> để xóa nhóm khách hàng.
 
 <Frame caption="Xóa nhóm khách hàng">
   <img
