--- a/automation/template-notification.mdx
+++ b/automation/template-notification.mdx
@@ -4,3 +4,84 @@ description: 'Description of your new file.'
 icon: "message-plus"
 ---
 
+## **Danh sách mẫu tin ZNS** 
+
+Các **mẫu tin ZNS (Zalo Notification Service)** được hệ thống cung cấp là những mẫu **đã được Zalo phê duyệt**, đảm bảo tính chính xác và tuân thủ quy định của nền tảng.  
+
+Khi người dùng nhấn nút **“Cập nhật mẫu tin”**, hệ thống sẽ hiển thị **các mẫu đã được Zalo duyệt sẵn**, giúp người dùng lựa chọn và sử dụng nhanh chóng, đảm bảo nội dung phù hợp với tiêu chuẩn Zalo.
+
+<Frame caption="Danh sách mẫu tin ZNS được Zalo phê duyệt">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image588_c1be1803bb.png"
+    alt="Giao diện danh sách mẫu tin ZNS"
+    style={{ borderRadius: "0.5rem" }}
+  />
+</Frame>
+
+Nếu người dùng cần thêm mẫu tin khác **chưa có trong danh sách Zalo phê duyệt**, có thể **liên hệ trực tiếp với công ty** để được hỗ trợ tạo mới và gửi duyệt.
+
+---
+
+## **Danh sách mẫu tin OA**
+
+Truy cập **Automation → Danh sách mẫu tin OA** để xem và quản lý các mẫu tin được sử dụng trong Official Account (OA).
+
+<Frame caption="Danh sách mẫu tin OA trong Automation">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image589_876d7fd406.png"
+    alt="Giao diện danh sách mẫu tin OA"
+    style={{ borderRadius: "0.5rem" }}
+  />
+</Frame>
+
+Các mẫu tin OA được chia thành **3 loại chính**:
+
+- **Tin tư vấn:**  
+  Dùng để thông báo các cập nhật, hướng dẫn hoặc thông tin hỗ trợ khách hàng.  
+  *Ví dụ:* Thông báo cập nhật thông tin, hướng dẫn sử dụng dịch vụ, hoặc tin nhắn hỗ trợ.
+
+- **Tin giao dịch:**  
+  Liên quan đến các hoạt động giao dịch như xác nhận đơn hàng, thanh toán, hoặc thông báo vận chuyển.  
+  *Ví dụ:* Đơn hàng đang giao, thanh toán thành công, đơn hàng bị hủy.
+
+- **Tin truyền thông:**  
+  Dùng để quảng bá chương trình, chào mừng khách hàng mới hoặc gửi lời cảm ơn.  
+  *Ví dụ:* Chương trình khuyến mãi, thông báo tri ân, ưu đãi khách hàng thân thiết.
+
+📘 *Việc phân loại này giúp người dùng dễ dàng tìm và quản lý từng loại tin nhắn cụ thể hơn.*
+
+---
+
+### **Thêm mẫu có sẵn** 
+
+Hệ thống cung cấp một số **mẫu tin OA cơ bản** để người dùng có thể thêm nhanh mà không cần tạo mới.
+
+Truy cập **Mini App → Danh sách mẫu tin OA → Thêm thông tin mẫu tin → Chọn “Có”**.
+
+<Frame caption="Thêm mẫu tin OA có sẵn">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image590_d47290b0e4.png"
+    alt="Thêm mẫu tin OA có sẵn"
+    style={{ borderRadius: "0.5rem" }}
+  />
+</Frame>
+
+Sau khi chọn “**Có**”, hệ thống sẽ hiển thị danh sách các mẫu tin cơ bản gồm:
+
+- Đơn hàng đang trên đường giao  
+- Thông báo giao hàng thành công  
+- Thông báo đơn hàng có cộng tác viên đã hoàn thành  
+- Xác nhận đơn hàng có cộng tác viên  
+- Yêu cầu rút tiền hoa hồng đã được duyệt  
+- Thông báo sử dụng điểm  
+- Cập nhật thông tin thành công  
+- Yêu cầu rút tiền hoa hồng đã bị từ chối  
+- Thông báo tăng hạng  
+- Đơn hàng đã bị hủy  
+- Thanh toán thành công  
+- Đặt hàng thành công
+
+---
+
+💡 *Các mẫu tin có sẵn giúp người dùng tiết kiệm thời gian thiết lập, đảm bảo đúng định dạng và nội dung phù hợp với quy định của Zalo OA.*
+
