Documentation edits made through Mintlify web editor

--- a/automation/automation-flow.mdx
+++ b/automation/automation-flow.mdx
@@ -1,6 +1,270 @@
 ---
-title: 'Automation Flow'
-description: 'Description of your new file.'
+title: "Automation Flow"
+description: "Description of your new file."
 icon: "arrow-progress"
 ---
 
+## **Hành động**
+
+---
+
+### **Thêm hành động có sẵn**
+
+Hệ thống cung cấp một số **hành động mẫu cơ bản** cho người dùng.\
+Truy cập **Automation → Hành động → Thêm hành động mẫu → Chọn “Có”**.
+
+<Frame caption="Thêm hành động mẫu có sẵn">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image591_a35303fe2b.png"
+    alt="Giao diện thêm hành động mẫu có sẵn"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+Sau khi chọn **“Có”**, hệ thống sẽ hiển thị các mẫu hành động có sẵn bao gồm:
+
+- Đơn hàng đang trên đường giao
+- Thông báo giao hàng thành công
+- Đơn hàng có cộng tác viên đã được thanh toán
+- Thông báo xác nhận đơn hàng có cộng tác viên
+- Thông báo sale đặc biệt
+- Thông báo yêu cầu rút tiền hoa hồng đã thành công
+- Thông báo khách hàng đã sử dụng điểm áp dụng trong đặt hàng
+- Thông báo cập nhật thông tin thành công
+- Thông báo yêu cầu rút tiền hoa hồng đã bị từ chối
+- Thông báo tăng hạng của khách hàng
+
+---
+
+## **Chiến dịch**
+
+---
+
+### **Tìm kiếm chiến dịch**
+
+Truy cập **Automation → Chiến dịch**\
+→ Nhập từ khóa vào thanh tìm kiếm → Nhấn **Enter** để tìm kiếm chiến dịch mong muốn.
+
+<Frame caption="Tìm kiếm chiến dịch">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image592_bc9e4e16cf.png"
+    alt="Giao diện tìm kiếm chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Thêm chiến dịch**
+
+Truy cập **Automation → Chiến dịch → Thêm chiến dịch**.
+
+<Frame caption="Thêm chiến dịch mới">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image593_774d9b2861.png"
+    alt="Nút thêm chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+Sau khi chọn, hệ thống hiển thị biểu mẫu.\
+→ Nhập **tên** và **mô tả chiến dịch**, sau đó chọn **Tiếp theo**.
+
+<Frame caption="Biểu mẫu nhập thông tin chiến dịch">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image594_4a8d808bf2.png"
+    alt="Biểu mẫu nhập thông tin chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+Tiếp theo, hệ thống hiển thị phần **Thiết lập chiến dịch**, người dùng chọn các trường phù hợp và nhấn **Tiếp theo**.
+
+<Frame caption="Thiết lập chiến dịch">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image595_08e67f3520.png"
+    alt="Thiết lập chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Loại chiến dịch gửi tin**
+
+#### **1. Gửi một lần – Gửi ngay**
+
+- Tin nhắn sẽ được gửi ngay khi chiến dịch được kích hoạt.
+- Thường dùng cho **chiến dịch truyền thông, quảng cáo hoặc thông báo ngắn hạn**.
+- Hệ thống mặc định sử dụng **mẫu tin OA**.
+- Người dùng có thể tạo **hành động (Action)**, chọn **đối tượng cụ thể** để gửi tin.
+
+**Có hai cách gửi tin:**
+
+- **Gửi tất cả khách hàng đã follow OA**
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image596_d719839a27.png"
+    alt="Gửi tất cả khách hàng đã follow OA"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+- **Gửi theo nhóm đối tượng cụ thể**
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image597_1edb111f88.png"
+    alt="Gửi theo nhóm đối tượng cụ thể"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Các loại tin trong chiến dịch gửi một lần**
+
+> **Tin tư vấn**
+>
+> - Có thể thay đổi **ảnh bìa** và **nội dung tùy chỉnh**.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image598_0453369ce0.png"
+    alt="Ví dụ tin tư vấn"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+> **Tin giao dịch**
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image599_7177fad4f9.png"
+    alt="Ví dụ tin giao dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image600_e82c92d394.png"
+    alt="Giao diện tin giao dịch chi tiết 2"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+> - Chọn **loại giao dịch**
+> - Tải **ảnh bìa** (nếu cần)
+> - Nhập **tên mẫu tin**, **nội dung**, và **cập nhật bảng thông tin**
+> - Thay đổi liên kết “Kiểm tra lộ trình”, “Xem giỏ hàng”, “Liên hệ tổng đài” bằng cách nhấn <Icon icon="eyes" color="#cfcfcf" size={15} />
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image601_94df061c55.png"
+    alt="Giao diện tin giao dịch chi tiết 3"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+> **Tin truyền thông**
+
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image602_b84a00038c.png"
+    alt="Tin truyền thông 1"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image603_7c0c1fe839.png"
+    alt="Tin truyền thông 2"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+> - Có thể thay đổi **ảnh bìa**, **tên mẫu tin**, **nội dung**, và các thông tin hiển thị tương tự.
+> - Cập nhật “Kiểm tra lộ trình”, “Xem giỏ hàng”, “Liên hệ tổng đài” bằng cách nhấn <Icon icon="eyes" color="#cfcfcf" size={15} /> .
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image601_94df061c55.png"
+    alt="Tin truyền thông 3"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **2. Gửi nhiều lần – Gửi xuyên suốt**
+
+- Tin nhắn được gửi theo **chu kỳ lặp lại**.
+- Dùng cho các chiến dịch **dài hạn**, ví dụ: xác nhận đơn hàng, cập nhật trạng thái, giao hàng thành công,…
+- Có thể chọn mẫu tin từ **ZNS** hoặc **OA**, kết hợp nhiều **hành động (Action)** trong cùng chiến dịch.
+- Gửi tin theo hai cách:
+  - Tất cả khách hàng đã follow OA
+  - Hoặc nhóm đối tượng cụ thể
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image605_da5f1a4a6d.png"
+    alt="Chiến dịch gửi xuyên suốt"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+Khi đã nhập đầy đủ thông tin, nhấn **Tạo** để hoàn tất chiến dịch.
+
+---
+
+### **Xem chi tiết chiến dịch**
+
+Truy cập **Automation → Chiến dịch**\
+→ Nhấn biểu tượng <Icon icon="eye" color="#cfcfcf" size={15} /> để xem chi tiết chiến dịch.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image606_6a9d7e6a17.png"
+    alt="Xem chi tiết chiến dịch - bước 1"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image607_a774acf454.png"
+    alt="Xem chi tiết chiến dịch - bước 2"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Chỉnh sửa chiến dịch**
+
+Truy cập **Automation → Chiến dịch**\
+→ Nhấn biểu tượng <Icon icon="edit" color="#cfcfcf" size={15} /> để chỉnh sửa chiến dịch.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image608_91e4b2d706.png"
+    alt="Chỉnh sửa chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **Xóa chiến dịch**
+
+Truy cập **Automation → Chiến dịch**\
+→ Nhấn biểu tượng <Icon icon="trash-2" color="#cfcfcf" size={15} /> để xóa chiến dịch.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image609_8943cd1ec6.png"
+    alt="Xóa chiến dịch"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
