Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/settings-company-get.mdx
+++ b/api-reference/endpoint/settings-company-get.mdx
@@ -2,3 +2,7 @@
 title: "Get company settings"
 openapi: "GET /api/v1/settings/company"
 ---
+
+**Test nội dung thủ công**
+
+Nếu dòng này xuất hiện, chứng tỏ file `.mdx` hoạt động.
