Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/settings-company-get.mdx
+++ b/api-reference/endpoint/settings-company-get.mdx
@@ -3,6 +3,6 @@ title: "Get company settings"
 openapi: "GET /api/v1/settings/company"
 ---
 
-**Test nội dung thủ công**
-
-Nếu dòng này xuất hiện, chứng tỏ file `.mdx` hoạt động.
+**DEBUG**
+Nếu dòng này hiện mà không có phần “Request / Response / Schema”,  
+nghĩa là Mintlify chưa đọc được file OpenAPI.
