Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/custom-collection-get.mdx
+++ b/api-reference/endpoint/custom-collection-get.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Get all custom collections"
-openapi: "GET /api/v1/custom-collection"
+title: "Create custom collection"
+openapi: "POST /api/v1/custom-collection"
 ---
