--- a/api-reference/endpoint/custom-collection-with-parent-create.mdx
+++ b/api-reference/endpoint/custom-collection-with-parent-create.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Create custom collection with parent"
-openapi: "POST /api/v1/custom-collection/with-parent"
+title: "[POST] Custom collection with parent"
+openapi: "x-post-with-parent /api/v1/custom-collection"
 ---
