Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/custom-collection-with-parent-create.mdx
+++ b/api-reference/endpoint/custom-collection-with-parent-create.mdx
@@ -1,4 +1,4 @@
 ---
-title: "[POST] Custom collection with parent"
+title: "Custom collection with parent"
 openapi: "x-post-with-parent /api/v1/custom-collection"
 ---
