Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/news-create.mdx
+++ b/api-reference/endpoint/news-create.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Create new article"
-openapi: "POST /api/v1/news"
+title: "[POST] News Category"
+openapi: "POST /api/v1/news-category"
 ---
