--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-delete.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-delete.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Delete Redeem Voucher"
+openapi: "DELETE /api/v1/redeem-voucher/{id}"
 ---
-
