--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Update Redeem Voucher"
+openapi: "PUT /api/v1/redeem-voucher/{id}"
 ---
-
