Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/list-gifts/voucher-collection-create.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/voucher-collection-create.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-openapi: "POST /api/v1/batches-promotion.'
+title: "Create Voucher Collection"
+openapi: "POST /api/v1/batches-promotion"
 ---
-
