--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
@@ -1,4 +1,5 @@
 ---
 title: "Update Redeem Voucher"
-openapi: "PUT /api/v1/redeem-voucher/{id}"
+description: "Cập nhật thông tin chương trình đổi quà hoặc voucher cụ thể (ID: aJrgKrl1) trong hệ thống Aiminis POS."
+openapi: "PUT /api/v1/redeem-voucher/aJrgKrl1"
 ---
