Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
@@ -1,5 +1,4 @@
 ---
 title: "Update Redeem Voucher"
-description: "Cập nhật thông tin chương trình đổi quà hoặc voucher cụ thể (ID: aJrgKrl1) trong hệ thống Aiminis POS."
-openapi: "PUT /api/v1/redeem-voucher/aJrgKrl1"
+openapi: "PUT /api/v1/redeem-voucher/{id}"
 ---
