Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/test123.mdx
+++ b/api-reference/endpoint/test123.mdx
@@ -1,4 +1,4 @@
 ---
-title: "test display"
-openapi: "GET /api/v1/bookings-setting"
+title: "Confirm Booking"
+openapi: "POST /api/v1/online-booking-time/confirm/{id}"
 ---
