Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/te12.mdx
+++ b/api-reference/endpoint/te12.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Confirm Booking"
-openapi: "POST /api/v1/online-booking-time/confirm/{id}"
+openapi: "POST /api/v1/online-booking-time/confirm/XAW5eyWo"
 ---
