Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/custom-collection-update.mdx
+++ b/api-reference/endpoint/custom-collection-update.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Update custom collection"
-openapi: "PUT /api/v1/custom-collection/{id}"
+openapi: "PUT /api/v1/custom-collection"
 ---
