--- a/api-reference/endpoint/custom-collection-delete.mdx
+++ b/api-reference/endpoint/custom-collection-delete.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Delete custom collection"
-openapi: "DELETE /api/v1/custom-collection/{id}"
+openapi: "DELETE /api/v1/custom-collection"
 ---
