Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-delete.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-delete.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Delete Redeem Voucher"
-openapi: "DELETE /api/v1/redeem-voucher/{id}"
+openapi: "DELETE /api/v1/redeem-voucher/aJrgKrl1"
 ---
