--- a/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
+++ b/api-reference/endpoint/loyalty/list-gifts/redeem-voucher-update.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Update Redeem Voucher"
-openapi: "PUT /api/v1/redeem-voucher/{id}"
+openapi: "PUT /api/v1/redeem-voucher/6ybkZq3D"
 ---
