Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/manage-membership/membership-rank-get.mdx
+++ b/api-reference/endpoint/loyalty/manage-membership/membership-rank-get.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Membership Ranks"
-openapi: "GET /api/v1/membership-rank"
+title: "Membership Rank"
+openapi: "GET /api/v1/response-user-member"
 ---
