Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/manage-point/mission-collection-create.mdx
+++ b/api-reference/endpoint/loyalty/manage-point/mission-collection-create.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Create Mission Collection"
-openapi: "POST /api/v1/mission"
+title: "Mission Collection"
+openapi: "POST /api/v1/store-multiple-mission"
 ---
