--- a/api-reference/endpoint/loyalty/manage-point/mission-collection-get.mdx
+++ b/api-reference/endpoint/loyalty/manage-point/mission-collection-get.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Get Mission Collection"
-openapi: "GET /api/v1/mission"
+title: "Mission Collection"
+openapi: "GET /api/v1/missions"
 ---
