Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/loyalty/manage-point/point-conversion-create.mdx
+++ b/api-reference/endpoint/loyalty/manage-point/point-conversion-create.mdx
@@ -1,4 +1,4 @@
 ---
-title: "Delete Mission Collection"
-openapi: "DELETE /api/v1/edit-all-user-members-aimini"
+title: "Point Collection"
+openapi: "POST /api/v1/edit-all-user-members-aimini"
 ---
