--- a/api-reference/endpoint/services/service/service-collection-create.mdx
+++ b/api-reference/endpoint/services/service/service-collection-create.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Service Collection"
+openapi: "POST /api/v1/services"
 ---
-
