--- a/api-reference/endpoint/services/service/service-collection-delete.mdx
+++ b/api-reference/endpoint/services/service/service-collection-delete.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Service Collection"
+openapi: "DELETE /api/v1/services/{id}"
 ---
 
