--- a/api-reference/endpoint/services/service/service-collection-get.mdx
+++ b/api-reference/endpoint/services/service/service-collection-get.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Service Collection"
+openapi: "GET /api/v1/services"
 ---
 
