--- a/api-reference/endpoint/services/service/service-collection-update.mdx
+++ b/api-reference/endpoint/services/service/service-collection-update.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Service Collection"
+openapi: "PUT /api/v1/services/{id}"
 ---
 
