Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/services/category/service-category-delete.mdx
+++ b/api-reference/endpoint/services/category/service-category-delete.mdx
@@ -1,5 +1,5 @@
 ---
 title: "Service Category"
 openapi: "DELETE /api/v1/service-categories/{id}"
-ghhhhh
+description: 'Description of your new file.'
 ---
