Documentation edits made through Mintlify web editor

--- a/settings/currency-setting.mdx
+++ b/settings/currency-setting.mdx
@@ -1,6 +1,97 @@
 ---
-title: 'Cài đặt thanh toán'
-description: 'Description of your new file.'
+title: "Cài đặt thanh toán"
+description: "Description of your new file."
 icon: "money-check-dollar"
 ---
 
+## Phương thức thanh toán
+
+---
+
+### **Tổng quan**
+
+Truy cập **Cài đặt → Phương thức thanh toán** để xem toàn bộ các phương thức thanh toán của Mini App.\
+Tại đây, người dùng có thể **thêm, xem, chỉnh sửa, hoặc xoá** phương thức thanh toán.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image610_f229fb3673.png"
+    alt="Danh sách phương thức thanh toán"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **1. Phương thức thanh toán chuyển khoản**
+
+#### **Thêm phương thức chuyển khoản**
+
+Truy cập **Cài đặt → Phương thức thanh toán → + Thêm phương thức thanh toán**.\
+Biểu mẫu hiển thị như hình:
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image611_b9a4049202.png"
+    alt="Thêm phương thức chuyển khoản"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+Người dùng chọn **Loại: Ngân hàng**, nhập tên loại thanh toán là **Chuyển khoản**, sau đó điền thông tin tài khoản ngân hàng nhận tiền.\
+Có thể thêm nhiều tài khoản bằng cách nhấn **“Thêm thông tin ngân hàng”** → Cuối cùng chọn **“Tạo”** để lưu.
+
+---
+
+#### **Chỉnh sửa phương thức chuyển khoản**
+
+Truy cập **Cài đặt → Phương thức thanh toán** → chọn biểu tượng\
+<Icon icon="edit" color="#cfcfcf" size={15} /> để chỉnh sửa.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image612_6fcd41c63a.png"
+    alt="Chỉnh sửa phương thức chuyển khoản"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+Biểu mẫu mới xuất hiện → Người dùng có thể **cập nhật hoặc thêm mới tài khoản** → Chọn **“Cập nhật”** để lưu thông tin.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image613_f6d22fa406.png"
+    alt="Cập nhật phương thức chuyển khoản"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+#### **Xóa phương thức chuyển khoản**
+
+Truy cập **Cài đặt → Phương thức thanh toán** → Chọn biểu tượng\
+<Icon icon="trash-2" color="#cfcfcf" size={15} /> để xoá.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image614_f4f5c4adfb.png"
+    alt="Xóa phương thức chuyển khoản"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
+### **2. Phương thức thanh toán VNPay**
+
+Để thêm phương thức VNPay, người dùng cần đăng ký **Merchant** với VNPay để nhận **Mã website** và **Mã bí mật**.\
+Nhập hai mã này vào tab **VNPay**, bật trạng thái và chọn **“Cập nhật”**.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image615_67e15570c6.png"
+    alt="Cấu hình phương thức VNPay"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
