Documentation edits made through Mintlify web editor

--- a/settings/company-profile-setting.mdx
+++ b/settings/company-profile-setting.mdx
@@ -3,4 +3,20 @@ title: 'Thông tin công ty'
 description: 'Description of your new file.'
 icon: "id-card"
 ---
+## **Cài đặt công ty**
+
+Truy cập **Cài đặt → Cài đặt** để hiển thị và chỉnh sửa các thông tin công ty như:  
+tên công ty, email, số điện thoại, địa chỉ, màu chủ đạo, logo sáng, logo tối,…  
+Nhấn **“Cập nhật”** để hoàn tất thao tác.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image630_8bc0b5cdca.png"
+    alt="Giao diện cài đặt công ty"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
+
+---
+
 
