--- a/settings/integration.mdx
+++ b/settings/integration.mdx
@@ -3,4 +3,15 @@ title: 'Tích hợp'
 description: 'Description of your new file.'
 icon: "network-wired"
 ---
+## **Quản lý tích hợp**
 
+Truy cập **Quản lý Mini App → Quản lý tích hợp** để hiển thị danh sách các hệ thống hoặc đơn vị quản lý đã được hỗ trợ.  
+Liên hệ **Aimini** để được hỗ trợ tích hợp với các hệ thống hoặc đơn vị được đề xuất.
+
+<Frame>
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image631_451921c149.png"
+    alt="Giao diện quản lý tích hợp trong hệ thống Aimini"
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
