Documentation edits made through Mintlify web editor

--- a/settings/currency-setting.mdx
+++ b/settings/currency-setting.mdx
@@ -4,7 +4,7 @@ description: "Description of your new file."
 icon: "money-check-dollar"
 ---
 
-## Phương thức thanh toán
+## **Phương thức thanh toán**
 
 ---
 
