Documentation edits made through Mintlify web editor

--- a/app-builder/builder/pages/flashsale-page.mdx
+++ b/app-builder/builder/pages/flashsale-page.mdx
@@ -4,7 +4,7 @@ description: "Description of your new file."
 icon: "circle-user"
 ---
 
-## **6.3. FlashSale**
+### **3.3.3 FlashSale**
 
 **Bố cục**\
 Người dùng có thể lựa chọn các bố cục hiển thị danh mục, bao gồm: Đơn giản, Danh sách, Cá tính.
