Documentation edits made through Mintlify web editor

--- a/app-builder/builder/general-settings.mdx
+++ b/app-builder/builder/general-settings.mdx
@@ -4,7 +4,7 @@ description: "Description of your new file."
 icon: "square-sliders-vertical"
 ---
 
-### 3.1. Cài đặt chung
+## **3.1. Cài đặt chung**
 
 Tại đây, người dùng có thể cài đặt các thông tin chung cho Mini App, bao gồm:
 
