--- a/api-reference/endpoint/products/categories/category-collection-get.mdx
+++ b/api-reference/endpoint/products/categories/category-collection-get.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Category Collection"
+openapi: "GET /api/v1/custom-collection"
 ---
-
