Documentation edits made through Mintlify web editor

--- a/sale-management/product-management/products-management.mdx
+++ b/sale-management/product-management/products-management.mdx
@@ -5,7 +5,14 @@ icon: "box-isometric"
 ---
 Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
 
-![Screenshot 2025-09-07 at 15.02.06.png](/images/Screenshot2025-09-07at15.02.06.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image634_b49dd66984.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể thấy được các số liệu báo cáo của từng sản phẩm và các tính năng như sau:
 
@@ -16,28 +23,70 @@ Tại phần Quản lý sản phẩm, truy cập tab sản phẩm.
 - Chọn “+ Thêm sản phẩm” để thêm sản phẩm mới cho hệ thống
 - Thêm từng sản phẩm ➝ Điền các thông tin biểu mẫu yêu cầu ➝ Nhấn “Tạo” để hoàn tất thao tác thêm sản phẩm
 
-![Screenshot 2025-09-07 at 15.07.47.png](/images/Screenshot2025-09-07at15.07.47.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image635_c0db30e7d3.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - Thêm sản phẩm biến thể, khi thêm sản phẩm ➝ Tích vào “Sản phẩm biến thể” ➝ Điền các thông tin biểu mẫu yêu cầu ➝ Nhấn “Tạo” để thêm sản phẩm biến thể
 
-![screenshot_1757232680.png](/images/screenshot_1757232680.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image636_21e4770ac5.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - Thêm nhiều sản phẩm bằng cách import file excel ➝ Tải về template mẫu ➝ Nhập thông tin các sản phẩm ➝ Upload file ➝ Chọn “Nhập vào” để thêm các sản phẩm
 
-![screenshot_1757232733.png](/images/screenshot_1757232733.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image637_849cc57db7.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - Tìm Kiếm sản phẩm theo tên, ngày tạo, danh mục, thương hiệu
 
-![screenshot_1757232803.png](/images/screenshot_1757232803.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image638_25c1a6a5a5.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - Chọn icon <Icon icon="eye" color="#1592E7" size={15}/> để xem chi tiết sản phẩm  
 - Chọn icon <Icon icon="pencil" color="#1542D5" size={15}/> để chỉnh sửa sản phẩm  
 - Chọn icon <Icon icon="trash-can" color="#e85c0c" size={15}/> để xóa từng sản phẩm  
 - Xóa nhiều sản phẩm cùng lúc. Chọn check-box ➝ Hành động ➝ Xóa
 
-![screenshot_1757233295.png](/images/screenshot_1757233259.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image639_297be29dbe.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 - Chọn icon <Icon icon="toggle-large-on" color="#0abd3d" size={15}/> để bật/tắt sản phẩm  
 - Bật/tắt nhiều sản phẩm cùng lúc. Chọn check-box ➝ Hành động ➝ On/Off sản phẩm
 
-![screenshot_1757233656.png](/images/screenshot_1757233656.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image640_a1f2a0e415.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
