--- a/sale-management/product-management/categories-management.mdx
+++ b/sale-management/product-management/categories-management.mdx
@@ -6,24 +6,66 @@ icon: "arrow-down-short-wide"
 
 Tại phần Quản lý sản phẩm, truy cập tab Danh mục
 
-![danhMuc1.png](/Screenshot2025-09-07at14.51.32.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image641_f6a3f8a45b.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể tạo các Danh mục cho các sản phẩm của hệ thống
 
 - Chọn “+ Thêm danh mục” để tạo danh mục cho các sản phẩm
   - Thêm từng Danh mục → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm Danh mục
 
-    ![danhMuc2.png](/screenshot_1757231532.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image642_ba4c9da52d.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Thêm nhiều Danh mục bằng cách import file excel → Tải về template mẫu → Nhập thông tin các Danh mục → Upload file → Chọn “Nhập vào” để thêm các Danh mục
 
-    ![danhMuc3.png](/screenshot_1757231571.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image643_cbef335742.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chọn icon <Icon icon="toggle-large-on" color="#3259f6" size={15} /> để bật/tắt thông tin Danh mục
 
-    ![danhMuc4.png](/screenshot_1757231618.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image644_dabfe51c5c.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Chọn icon <Icon icon="pencil" color="#1511e8" size={15} /> để chỉnh sửa Danh mục
   - Chọn icon check-box để có thể xóa một hoặc nhiều Danh mục
 
-    ![danhMuc6.png](/screenshot_1757231679.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image645_be4cc54dc6.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - Người dùng có thể tạo các danh mục con bằng cách xét danh mục cha khi khởi tạo danh mục. Để hiển thi danh mục con, nhấn "+" ở trước các danh mục
 
-    ![danhMuc7.png](/screenshot_1757231918.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image646_05fc3ba4ea.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
