--- a/sale-management/product-management/brands-management.mdx
+++ b/sale-management/product-management/brands-management.mdx
@@ -5,24 +5,59 @@ icon: "nfc-magnifying-glass"
 
 Tại phần Quản lý sản phẩm, truy cập tab Thương hiệu.
 
-![Picture1 Pn](/Screenshot2025-09-07at14.44.01.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image647_bd6d53866f.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể tạo các thương hiệu để đại diện cho các sản phẩm của hệ thống
 
 - Chọn “\+ Thêm” để thêm thương hiệu cho các sản phẩm
   - Thêm từng thương hiệu → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác thêm thương hiệu
 
-    ![2.png](/images/2.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image648_a2b95e17f6.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
   - 
   - Thêm nhiều thương hiệu bằng cách import file excel → Tải về template mẫu → Nhập thông tin các thương hiệu → Upload file → Chọn “Nhập vào” để thêm các thương hiệu
 
-    ![3.png](/screenshot_1757231245.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image649_624dd97446.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Chọn icon <Icon icon="eye" color="#0ca8cc" size={15} /> để xem chi tiết thương hiệu
 - Chọn icon <Icon icon="pencil" color="#1025dc" size={15} /> để chỉnh sửa thương hiệu
 - Chọn icon <Icon icon="trash-can" color="#e5123a" size={15} /> để xóa thương hiệu
   - Xóa nhiều thương hiệu cùng lúc
 
-    ![6.png](/screenshot_1757231349.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image650_22e135d9c5.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Người dùng có thể tìm kiếm thương hiệu theo tên hoặc lọc các thương hiệu theo ngày được khởi tạo để hiển thị kết quả như yêu cầu
 
-  ![7.png](/screenshot_1757231391.png)
+ <Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image651_b14cf78857.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
