Documentation edits made through Mintlify web editor

--- a/sale-management/order-management.mdx
+++ b/sale-management/order-management.mdx
@@ -4,9 +4,16 @@ description: "Description of your new file."
 icon: "cart-plus"
 ---
 
-Tại phần Cửa hàng, truy cập Bán hàng online
+Tại phần Bán hàng, truy cập **Bán hàng online**
 
-![Screenshot 2025-09-07 at 15.43.55.png](/images/Screenshot2025-09-07at15.43.55.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image652_b951ec42fc.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể thấy được các số liệu báo cáo cũng như từng trạng thái các đơn hàng thời điểm hiện tại như:
 
@@ -26,7 +33,14 @@ Tại phần Cửa hàng, truy cập Bán hàng online
 
 Người dùng có thể tìm kiếm đơn hàng theo số hóa đơn hoặc lọc theo hình thức thanh toán để hiển thị các đơn hành theo yêu cầu
 
-![screenshot_1757235177.png](/images/screenshot_1757235177.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image653_3a617674b0.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 **Cập nhật trạng thái đơn hàng**
 
@@ -43,7 +57,14 @@ Khi một đơn hàng được đẩy về hệ thống sau khi khách hàng mua
 
 **Thêm đơn hàng**
 
-![screenshot_1757236681.png](/images/screenshot_1757236681.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image654_312f234785.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Người dùng có thể thêm đơn hàng mới cho khách hàng có sẵn trong hệ thống (Nếu khách hàng chưa có trên hệ thống thì tạo thông tin khách hàng bằng cách nhấn nút <Icon icon="circle-plus" size={15} /> ở trường Khách hàng → điền các thông tin biểu mẫu yêu cầu và nhấn “Tạo” để hoàn tất tạo mới một khách hàng)
 
