Documentation edits made through Mintlify web editor

--- a/users-management/customers-management.mdx
+++ b/users-management/customers-management.mdx
@@ -6,7 +6,14 @@ icon: "circle-user"
 
 Tại phần Quản lý người dùng, truy cập tab Khách hàng
 
-![screenshot_1757237218.png](/images/screenshot_1757237218.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image655_d05e4dfcc4.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể thấy được các số liệu thống kê cũng như các thông tin Khách hàng hiện tại như:
 
@@ -17,11 +24,25 @@ Tại phần Quản lý người dùng, truy cập tab Khách hàng
 
 Người dùng có thể tìm kiếm khách hàng theo tên, email, số điện thoại hoặc lọc các khách hàng được khởi tạo theo thời gian hoặc theo trạng thái (Đã kích hoặc - Vô hiệu hóa)
 
-![screenshot_1757237385.png](/images/screenshot_1757237385.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image656_ff0ff2f164.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Để thêm một khách hàng mới, người dùng nhấn nút “\+ Thêm” → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất thao tác tạo khách hàng (Những khách hàng được tạo từ hệ thống sẽ được gắn tag “Khách hàng ngoài”)
 
-![screenshot_1757237474.png](/images/screenshot_1757237474.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image657_73be1bce44.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Mỗi khách hàng sau khi được khởi tạo hoặc từ mini app sẽ có các thông tin như sau:
 
@@ -38,7 +59,21 @@ Mỗi khách hàng sau khi được khởi tạo hoặc từ mini app sẽ có c
   - <u>Lưu ý</u>: Khách hàng đã phát sinh giao dịch vs hệ thống sẽ không thể xóa
 - Thể hiện công nợ trên giao diện mỗi khách hàng
 
-  ![screenshot_1757238193.png](/images/screenshot_1757238193.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image658_182d131bfe.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 - Tạo nhóm khách hàng: Chọn check-box trước mỗi khách hàng → Nhấn nút “Thêm nhóm” → Tạo một nhóm khách hàng mới (nhấn nút <Icon icon="circle-plus" size={15} /> → Điền các thông tin biểu mẫu yêu cầu → Nhấn “Tạo” để hoàn tất) hoặc thêm khách hàng đã chọn vào nhóm đã có
 
-  ![screenshot_1757238353.png](/images/screenshot_1757238353.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image659_f13e3b01c4.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
