Documentation edits made through Mintlify web editor

--- a/users-management/staff-management.mdx
+++ b/users-management/staff-management.mdx
@@ -6,7 +6,14 @@ icon: "user-tie"
 
 Tại phần Quản lý người dùng, truy cập tab Nhân viên
 
-![Screenshot 2025-09-07 at 16.48.53.png](/images/Screenshot2025-09-07at16.48.53.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image660_a51fc37afe.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể thấy được các thông tin của nhân viên như sau:
 
@@ -16,4 +23,11 @@ Tại phần Quản lý người dùng, truy cập tab Nhân viên
 - Chọn icon <Icon icon="trash-can" color="#f00808" size={15} /> để xóa nhân viên khỏi hệ thống
 - Thêm nhân viên: Chọn “\+ Thêm” để thêm nhân viên mới → Điền các thông tin biểu mẫu yêu cầu và chọn vai trò cho nhân viên (Nếu chưa tạo vai trò thì nhấn nút <Icon icon="circle-plus" size={15} /> để tạo vai trò và phân quyền hạn cho nhân viên) → Nhấn “Tạo” để hoàn tất quá trình tạo nhân viên mới
 
-  ![screenshot_1757238771.png](/images/screenshot_1757238771.png)
+ <Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image661_9052d56bf4.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
