--- a/users-management/role-management.mdx
+++ b/users-management/role-management.mdx
@@ -6,8 +6,22 @@ icon: "user-gear"
 
 Tại phần Cài đặt, truy cập Vai trò & Quyền
 
-![screenshot_1757238965.png](/images/screenshot_1757238965.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image662_dd8491396a.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
 
 Thêm vai trò bằng cách: Chọn nút “\+ Thêm vai trò” → Biểu mẫu sẽ được hiển thị → Điền và chọn các thông tin phù hợp → Chọn “Tạo” để hoàn tất thao tác. (_Lưu ý: Tên vai trò không được trùng lặp)_
 
-![Screenshot 2025-09-07 at 16.58.30.png](/images/Screenshot2025-09-07at16.58.30.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image663_bef8095076.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+    title=""
+  />
+</Frame>
