Documentation edits made through Mintlify web editor

--- a/loyalty/member-management.mdx
+++ b/loyalty/member-management.mdx
@@ -6,7 +6,13 @@ icon: "people-line"
 
 Tại phần Loyalty, truy cập Quản lý thành viên
 
-![Screenshot 2025-09-07 at 17.30.28.png](/images/Screenshot2025-09-07at17.30.28.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image666_937ac51abe.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể:
 
@@ -21,4 +27,10 @@ Tại phần Loyalty, truy cập Quản lý thành viên
   - Lịch sử đánh giá
   - Sản phẩm yêu thích
 
-![Screenshot 2025-09-07 at 17.34.44.png](/images/Screenshot2025-09-07at17.34.44.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image667_f0e921d843.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
