--- a/loyalty/points-setting.mdx
+++ b/loyalty/points-setting.mdx
@@ -4,9 +4,15 @@ description: "Description of your new file."
 icon: "hundred-points"
 ---
 
-Tại phần Loyalty, truy cập Caif đặt tích điểm
+Tại phần Loyalty, truy cập Cài đặt tích điểm
 
-![Screenshot 2025-09-07 at 17.47.22.png](/images/Screenshot2025-09-07at17.47.22.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image670_624b5c983b.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể:
 
@@ -19,5 +25,10 @@ Tại phần Loyalty, truy cập Caif đặt tích điểm
   - Đánh giá sản phẩm
   - Quét mã QR code
   - Tham gia khảo sát
-
-![screenshot_1757242262.png](/images/screenshot_1757242262.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image671_86c685d865.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
