--- a/loyalty/ranking-management.mdx
+++ b/loyalty/ranking-management.mdx
@@ -6,7 +6,13 @@ icon: "ranking-star"
 
 Tại phần Loyalty, truy cập Quản lý hạng thành viên
 
-![Screenshot 2025-09-07 at 17.39.12.png](/images/Screenshot2025-09-07at17.39.12.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image664_6b5a0637b8.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 Ở giao diện tổng quan, người dùng có thể:
 
@@ -14,7 +20,13 @@ Tại phần Loyalty, truy cập Quản lý hạng thành viên
   - Ở giao diện điền biểu mẫu, người dùng có thể thêm voucher cho hạng thành viên tương ứng sau khi đã tạo “Voucher hạng thành viên” ở phần “Khuyến mãi”
   - Tích vào checkbox “Giới hạn khuyến mãi” để giới hạn số tiền giảm tối đa theo đơn hàng. Không tích vào checkbox đồng nghĩa sẽ giảm số % đã xét cho tổng giá trị hóa đơn
 
-![screenshot_1757241778.png](/images/screenshot_1757241778.png)
+<Frame caption="">
+  <img
+    src="https://aimini-upload.sgp1.digitaloceanspaces.com/image665_015c91bab8.png"
+    alt=""
+    style={{ borderRadius:"0.5rem" }}
+  />
+</Frame>
 
 - Chọn icon <Icon icon="pencil" color="#091cf0" size={15} /> để chỉnh sửa hạng thành viên
 - Chọn icon <Icon icon="trash-can" color="#f50c0c" size={15} /> để xóa hạng thành viên
